--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <span class="color-blue">Hi! I'm Lino Silva.</span>
           </h1>
           <h4 class="color-blue">
-            A software engineer, LEGO lover, beer drinker, avid gamer kind of guy.
+            Avid tech enthusiast, gaming-lover, master lego builder, beer-drinking kind of guy.
           </h4>
           <div class="col-xs-12">
             <div class="teaser color-blue">Find out more below</div>
