--- a/index.html
+++ b/index.html
@@ -49,8 +49,10 @@
             A software engineer, LEGO lover, beer drinker, avid gamer kind of guy.
           </h4>
           <div class="col-xs-12">
-            <div class="teaser color-blue">Find out more below</div>
-            <div class="glyphicon glyphicon-chevron-down color-blue"></div>
+            <a href="#story" id="teaser-link" class="color-blue">
+              <div class="teaser">Find out more below</div>
+              <div class="glyphicon glyphicon-chevron-down color-blue"></div>
+            </a>
           </div>
         </div>
       </div>
@@ -105,7 +107,7 @@
           <div class="story-image-container">
             <img class="story-image nyan" src="imgs/nyan.gif" alt="Being awesome" />
           </div>
-          <span class="story-description present">Being awesome</span>
+          <span class="story-description">Being awesome</span>
         </div>
       </div>
     </section>
