--- a/index.html
+++ b/index.html
@@ -337,6 +337,14 @@
   </footer>
   <script src="bower_components/jquery/dist/jquery.min.js"></script>
   <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-25890838-1"></script>
   <script src="js/main.js"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-25890838-1');
+  </script>
 </body>
 </html>
